# cowdb

./: .gitignore  Cargo.toml  README.md  history.sqlite3
fails/: lib.rs  main.cpp  old.rs  redis.rs
src/: main.rs
