[package]
name = "cowdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.3.19", features = ["derive"] }



rustyline = {version = "12.0.0", features = ["with-sqlite-history"]}
serde = { version = "1.0.175", features = ["derive"] }
